# pycanha-core-python

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-publish-wheels.yml  ci.yml  test-rtd-build.yml
docs/: conf.py  index.md  index.rst  installation.md  requirements.txt
docs/api/: index.rst  pycanha_core.gmm.rst  pycanha_core.parameters.rst  pycanha_core.rst  pycanha_core.solvers.rst  pycanha_core.tmm.rst
src/pycanha_core/: __init__.py  __init__.py.in  __init__.pyi  conanfile.txt  parameters.pyi  prepare-build-backend.py  pycanha-core-conan-profile  solvers.pyi  tmm.pyi
src/pycanha_core_bindings/: CMakeLists.txt  conanfile.txt  conanfile.txt.in  prepare-build-backend.py  pycanha-core-conan-profile  pycanha-core-wrapper.cpp
src/pycanha_core_bindings/bindings/gmm/: geometry.hpp  geometrymodel.hpp  primitives.hpp  thermalmesh.hpp  transformations.hpp  trimesh.hpp
src/pycanha_core_bindings/bindings/parameters/: parameters.hpp
src/pycanha_core_bindings/bindings/solvers/: solvers.hpp
src/pycanha_core_bindings/bindings/thermaldata/: thermaldata.hpp
src/pycanha_core_bindings/bindings/tmm/: couplings.hpp  nodes.hpp  thermalmathematicalmodel.hpp  thermalnetwork.hpp
src/pycanha_core_bindings/bindings/utils/: logger.hpp
test/: conftest.py  test_logging.py  test_package.py
test/gmm/: test_primitives.py  test_transformations.py
test/parameters/: test_entities.py  test_formulas.py  test_parameters.py
test/solvers/: test_callbacks.py  test_sslu.py  test_tscnrlds.py  test_tscnrlds_jacobian.py
test/tmm/: test_coupling.py  test_couplings.py  test_node.py  test_nodes.py  test_thermaldata.py  test_thermalmathematicalmodel.py  test_thermalmodel.py  test_thermalnetwork.py
