[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.12", "numpy>=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pycanha-core"
version = "0.7.0"
description = "Python bindings for pycanha-core with nanobind"
readme = "README.md"
authors = [{ name = "Javier Piqueras Carreño", email = "javier.piqueras@upm.es" }]
requires-python = ">=3.12"
classifiers = [
    #Add licence classifiers
    #Add development status classifiers
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ['numpy>=2.4.0']

[project.urls]
"Homepage" = "https://github.com/pycanha-project/pycanha-core-python"
"Bug Tracker" = "https://github.com/pycanha-project/pycanha-core-python/issues"

[project.optional-dependencies]
test = ["pytest"]
build = ["build"]
docs = ["sphinx", "myst-parser", "sphinx-autoapi"]

mkl = ["mkl==2025.3.1"]

[tool.scikit-build]
cmake.version = ">=3.25"
cmake.source-dir = "src/pycanha_core_bindings"
cmake.build-type = "Release"
build.verbose = true
wheel.packages = []
wheel.install-dir = "."

