[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.12", "numpy>=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pycanha-core"
version = "0.8.0"
description = "Python bindings for pycanha-core with nanobind"
readme = "README.md"
authors = [{ name = "Javier Piqueras Carreño", email = "javier.piqueras@upm.es" }]
requires-python = ">=3.13"
classifiers = [
    #Add licence classifiers
    #Add development status classifiers
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    'numpy>=2.4.0',
    'mkl==2025.3.1; platform_system != "Darwin"',
]

[project.urls]
"Homepage" = "https://github.com/pycanha-project/pycanha-core-python"
"Bug Tracker" = "https://github.com/pycanha-project/pycanha-core-python/issues"

[project.optional-dependencies]
test = ["pytest"]
build = ["build"]
docs = [
    "sphinx>=7.2",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=2",
    "sphinx-design>=0.6",
    "numpy>=1.26",
]

mkl = ["mkl==2025.3.1"]

[tool.scikit-build]
cmake.version = ">=3.25"
cmake.source-dir = "src/pycanha_core_bindings"
cmake.build-type = "Release"
build.verbose = true
wheel.packages = []
wheel.install-dir = "."

